--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "monaco-diff",
+  "description": "A simple diff tool built on the Monaco code editor",
+  "author": "ian-craig",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,16 +9,28 @@
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "cross-env": "^5.2.0",
+    "electron-is-dev": "^1.1.0",
+    "monaco-editor": "^0.17.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-monaco-editor": "^0.30.1",
     "react-scripts": "3.1.1",
     "typescript": "3.5.3"
   },
+  "main": "public/electron.js",
+  "build": {
+    "appId": "com.monacodiff"
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "react-start": "react-scripts start",
+    "react-build": "react-scripts build",
+    "react-test": "react-scripts test --env=jsdom",
+    "react-eject": "react-scripts eject",
+    "electron-build": "electron-builder",
+    "release": "yarn react-build && electron-builder --publish=always",
+    "build": "yarn react-build && yarn electron-build",
+    "start": "concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +46,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^4.1.2",
+    "electron": "^6.0.3",
+    "electron-builder": "^21.2.0",
+    "wait-on": "^3.3.0"
   }
 }
