--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "monaco-editor": "^0.17.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-list-select": "^0.4.1",
     "react-monaco-editor": "^0.30.1",
     "react-scripts": "3.1.1",
     "react-split-pane": "^0.1.87",
