--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cross-env": "^5.2.0",
     "electron-is-dev": "^1.1.0",
     "monaco-editor": "^0.17.1",
+    "office-ui-fabric-react": "^7.27.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-list-select": "^0.4.1",
