--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,12 @@
     "noEmit": true,
     "jsx": "react"
   },
+  "typeRoots": [
+    "./node_modules/@types",
+    "./types/"
+  ],
   "include": [
-    "src"
+    "src",
+    "DataStructures"
   ]
 }
