--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-monaco-editor": "^0.30.1",
     "react-scripts": "3.1.1",
     "react-split-pane": "^0.1.87",
+    "short-hash": "^1.0.0",
     "typescript": "3.5.3"
   },
   "homepage": ".",
