--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/jest": "24.0.18",
     "@types/node": "12.7.2",
     "@types/nodegit": "^0.24.10",
+    "@types/p-queue": "^3.2.1",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
     "cross-env": "^5.2.0",
@@ -15,6 +16,7 @@
     "monaco-editor": "^0.17.1",
     "nodegit": "^0.25.1",
     "office-ui-fabric-react": "^7.27.1",
+    "p-queue": "^6.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-list-select": "^0.4.1",
