--- a/electron-tsconfig.json
+++ b/electron-tsconfig.json
@@ -1,4 +1,4 @@
-{ 
+{
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
@@ -10,8 +10,5 @@
     "outDir": "build",
     "skipLibCheck": true
   },
-  "include": [
-    "src/electron.ts",
-    "src/Providers/"
-  ]
+  "include": ["src/electron.ts", "src/Providers/"]
 }
