--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -19,11 +15,6 @@
     "jsx": "react",
     "noEmit": true
   },
-  "typeRoots": [
-    "./node_modules/@types",
-    "src/types"
-  ],
-  "include": [
-    "src"
-  ]
+  "typeRoots": ["./node_modules/@types", "src/types"],
+  "include": ["src"]
 }
