--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "16.9.0",
     "cross-env": "^5.2.0",
     "electron-is-dev": "^1.1.0",
+    "electron-store": "^4.0.0",
     "monaco-editor": "^0.17.1",
     "nodegit": "^0.25.1",
     "office-ui-fabric-react": "^7.27.1",
