--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/chunk": "^0.0.0",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.2",
     "@types/nodegit": "^0.24.10",
@@ -13,6 +14,7 @@
     "@types/react-dom": "16.9.0",
     "@types/react-redux": "^7.1.2",
     "@types/redux": "^3.6.0",
+    "chunk": "^0.0.2",
     "cross-env": "^5.2.0",
     "electron-is-dev": "^1.1.0",
     "electron-store": "^4.0.0",
