--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "author": "ian-craig",
   "version": "0.1.0",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ian-craig/diffy.git"
+  },
   "dependencies": {
     "@types/chunk": "^0.0.0",
     "@types/jest": "24.0.18",
@@ -18,6 +22,7 @@
     "cross-env": "^5.2.0",
     "electron-is-dev": "^1.1.0",
     "electron-store": "^4.0.0",
+    "electron-updater": "^4.2.0",
     "monaco-editor": "^0.17.1",
     "nodegit": "^0.25.1",
     "office-ui-fabric-react": "^7.27.1",
